--- a/ContactUs.html
+++ b/ContactUs.html
@@ -45,7 +45,7 @@ aria-expended="false" aria-label="Toggle navigation">
 
     </nav>
 
-        <!-- Contact Us -->
+  <!-- Contact Us -->
 
         <!--Header image-->
 
@@ -95,13 +95,14 @@ aria-expended="false" aria-label="Toggle navigation">
 
         </div>
 
-        <div class="col-lg-7 py-5">
+    <div class="col-lg-7 py-5">
 
-          <!--Google map-->
-          <div id="map-container-section" class="z-depth-1-half map-container-section mb-4" style="height: 400px">
-            <iframe src="https://maps.google.com/maps?q=Manhatan&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0"
-              style="border:0" allowfullscreen></iframe>
-          </div>
+      <!--Google map-->
+      <div id="map-container-section" class="z-depth-1-half map-container-section mb-4" style="height: 500px">
+        <iframe src="https://maps.google.com/maps?q=Manhatan&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0"
+          style="border:0" allowfullscreen></iframe>
+      </div>
+
           <!-- Buttons-->
           <div class="row text-center">
             <div class="col-md-4">
@@ -128,7 +129,7 @@ aria-expended="false" aria-label="Toggle navigation">
       </div>
 </div>
 </div>
-          </body>
+</body>
 
 <!-- Footer -->
 <footer class="page-footer font-small stylish-color-dark pt-4">
@@ -181,7 +182,7 @@ aria-expended="false" aria-label="Toggle navigation">
 </ul>
 
 <div class="footer-copyright text-center py-3" >© 2020 Copyright:
-  <a href="https://e-doctor.com/"> E-Doctor.com</a>
+  <a href="MainPage.html"> E-Doctor.com</a>
 </div>
 </footer>
 
