--- a/SignIn.html
+++ b/SignIn.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -15,33 +16,41 @@
 
   <body>
 
-        <!-- Navigation -->
-        <nav class="navbar navbar-light bg-light">
-          <a class="navbar-brand" href="MainPage.html"><h1>
-            <i class="fa fa-heartbeat" aria-hidden="true" style="color:red"></i>
-            E-Doctor</h1>
+    <!-- Navigation -->
+    <nav class="navbar navbar-light bg-light navbar-expand-sm">
+      <a class="navbar-brand" href="MainPage.html"><h1>
+        <i class="fa fa-heartbeat" aria-hidden="true" style="color:red"></i>
+        E-Doctor</h1>
+      </a>
+<button class="navbar-toggler" type="button"
+data-toggle="collapse" data-target="#myTogglerNav"
+aria-controls="myTogglerNav"
+aria-expended="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
 
-          </a>
-          <ul class="nav justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link active" href="SeeADoctor.html" style="color:black">See a Doctor</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="OurServices.html" style="color:black">Our Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="SignIn.html" style="color:black">My Account</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="ContactUs.html" style="color:black">Contact Us</a>
-            </li>
-          </ul>
-      </nav>
-        </nav>
+      <ul class="nav justify-content-end collapse navbar-collapse navbar-nav" id="myTogglerNav">
+        <li class="nav-item">
+          <a class="nav-link active" href="SeeADoctor.html" style="color:black">See a Doctor</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="OurServices.html" style="color:black">Our Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="SignIn.html" style="color:black">My Account</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="ContactUs.html" style="color:black">Contact Us</a>
+        </li>
+      </ul>
 
-
+    </nav>
 
 <!--Login-->
+
+<!-- Jumbotron -->
+<div class="jumbotron p-0">
+
     <div class="container">
       <div class="row">
 <div class="col-md-4"><p id=text></p></div>
@@ -87,6 +96,8 @@
 </div>
   </div>
 </div>
+</div>
+</body>
 
 <!-- Footer -->
 <footer class="page-footer font-small stylish-color-dark pt-4">
@@ -109,8 +120,6 @@
       <i class="fas fa-envelope mr-3" style="color:red"></i> info@example.com</p>
     <p>
       <i class="fas fa-phone mr-3" style="color:red"></i> + 01 234 567 88</p>
-    <p>
-      <i class="fas fa-print mr-3" style="color:red"></i> + 01 234 567 89</p>
     </div>
 
     <hr class="clearfix w-500 d-md-none">
@@ -141,7 +150,7 @@
 </ul>
 
 <div class="footer-copyright text-center py-3" >© 2020 Copyright:
-  <a href="https://e-doctor.com/"> E-Doctor.com</a>
+  <a href="MainPage.html"> E-Doctor.com</a>
 </div>
 </footer>
 
